--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div class="screen" id="screen5">
     <img src="ImagePhase1.jpeg" alt="Us on the staircase." width="354.98px" height="300px">
     <p>
-      The very first time we started meeting under the bridge, before sun could even rise itself, you filled my days with so much sweet limelight already.<br>I could never imagine how it would ever be without you, how i would even be where i am, without you...<br>You pulling me towards you on the sidewalks, me doing your makeup on the stairs, woh doggie wale chill uncle, you bringing me appy omggg >~<, Ather rides (me driving), the plane sighting and that silly crab, lots and lots of flowers, our first hug("Give me a beeeeg huggie"), our first kiss, playlists for each other, irreplaceable memories for a pretty future.<br>I love it all beyond imagination! 
+      The very first time we started meeting under the bridge, before the sun could even rise itself, you filled my days with so much sweet limelight already.<br>I could never imagine how it would ever be without you, how i would even be where i am, without you...<br>You pulling me towards you on the sidewalks, me doing your makeup on the stairs, woh doggie wale chill uncle, you bringing me appy omggg >~<, Ather rides (me driving), the plane sighting and that silly crab, lots and lots of flowers, our first hug("Give me a beeeeg huggie"), our first kiss, playlists for each other, irreplaceable memories for a pretty future.<br>I love it all beyond imagination! 
     </p>
     <button onclick="nextScreen(6)">Nexttttt</button>
   </div>
@@ -140,7 +140,7 @@
     <img src="ImagePhase2.jpeg" width="228px" height="200px">
     <img src="ImagePhase2(2).jpeg" width="256px" height="200px">
     <p>
-     !4th of June 2025. The day forever etched in our souls, a day to always remember no matter what, a date which is alredy a part of our lives.<br>Trust me I might forget my own name but Tanmay, I will never forget how you caught me wayyy off my guard with those paper rings. They are really special along with the ones that i gave to you. These rings were the beginning of our marriage. They are the reason we are married in our heads and i cant lie it was the sweetest it could ever be.<br>All along i have realised that is one, among all, is my favourite story to tell and i will be disappointed in myself if i ever lose even a single chance to preach it.<br>Yes, it is THAAAT PEAK:)
+     14th of June 2025. The day forever etched in our souls, a day to always remember no matter what, a date which is already a part of our lives.<br>Trust me I might forget my own name but Tanmay, I will never forget how you caught me wayyy off my guard with those paper rings. They are really special along with the ones that i gave to you. These rings were the beginning of our marriage. They are the reason we are married in our heads and i cant lie it was the sweetest it could ever be.<br>All along i have realised that this one, among all, is my favourite story to tell and i will be disappointed in myself if i ever lose even a single chance to preach it.<br>Yes, it is THAAAT PEAK:)
     </p>
     <button onclick="nextScreen(7)">The Next Chapter→</button>
   </div>
@@ -149,7 +149,7 @@
   <div class="screen" id="screen7">
     <img src="ImagePhase3.jpeg" width="300px" height="360px">
     <p>
-        Your favourite "Monster" drink, walk mid rain, Iris, the other staircase, THE GARDEN. You made my monsoon special than ever. I cant think about all those little moments without feeling the tingling sensation in my stomach.<br>The insect i hate is in my stomach right nowwwwww T_T<br>The smell of rain mixed with you cologne is something that is stuck in my mind. It is tattooed so deep, i dont think i'm ever gonna forget it in my life.<br>Every handplacement, every pattern of your breath, every curve in your voice and you silhouette. It is soooooo very nive to recall everything, i just wish you could see my smile right now ommmggg!!
+        Your favourite "Monster" drink, walk mid rain, Iris, the other staircase, THE GARDEN. You made my monsoon special than ever. I cant think about all those little moments without feeling the tingling sensation in my stomach.<br>The insect i hate is in my stomach right nowwwwww T_T<br>The smell of rain mixed with you cologne is something that is stuck in my mind. It is tattooed so deep, i dont think i'm ever gonna forget it in my life.<br>Every handplacement, every pattern of your breath, every curve in your voice and you silhouette. It is soooooo very nice to recall everything, i just wish you could see my smile right now ommmggg!!
     </p>
     <button onclick="nextScreen(8)">There is moreee yet</button>
   </div>
@@ -159,7 +159,7 @@
     <img src="fam1.jpeg" width="200px" height="240px">
     <img src="fam2.jpeg" width="200px" height="240px">
     <p>
-      I still couldn't believe that i told my mom about you. I never imagined it would happen. But honestly, it is the best unexpected thing to ever happen!<br>This feeling is something i only could have imagined and you made it come true for me. It feels so mature in a good way and i am really so glad about it.<br>Our first date.<br>It is one of the most magical experience of my life. You cam to my house to pick me, met my family, we had lunch together. I wouldn't want it any other way.<br>Thank you honey, you're my precious boy.
+      I still couldn't believe that i told my mom about you. I never imagined it would happen. But honestly, it is the best unexpected thing to ever happen!<br>This feeling is something i only could have imagined and you made it come true for me. It feels so mature in a good way and i am really so glad about it.<br>Our first date.<br>It is one of the most magical experience of my life. You came to my house to pick me up, met my family, we had lunch together. I wouldn't want it any other way.<br>Thank you honey, you're my precious boy.
     </p>
     <button onclick="nextScreen(9)">What happened next?</button>
   </div>
@@ -171,7 +171,7 @@
     <img src="us3.jpeg" width="207px" height="150px">
     <img src="us6.jpeg" width="231px" height="150px">
     <p>
-          We took such a huge step of our lives together, I'm glad i got to be by your side all along.<br>I don't have anyone else to call you mine in this city except you. You're the one i relied on to make this descision or else i wouldn't have been able to step out of my comfort zone, ever. I want to thankyou for it too.<br>I cherish every second we spend together. All my sweetest mmeories are filled with your giggles and smiles!<br>I love to love you.
+          We took such a huge step of our lives together, I'm glad i got to be by your side all along.<br>I don't have anyone else to call mine in this city except you. You're the one i relied on to make this descision or else i wouldn't have been able to step out of my comfort zone, ever. I want to thankyou for it too.<br>I cherish every second we spend together. All my sweetest mmeories are filled with your giggles and smiles!<br>I love to love you.
     </p>
     <button onclick="nextScreen(10)">Next step.</button>
   </div>
@@ -183,7 +183,7 @@
     <img src="./us5.jpeg" width="220.5px" height="150px">
     <img src="./us7.jpeg" width="150px" height="187.5px">
     <p>
-      We have evolved so much together since the day we met. It brings me to tears everytime, thinking how precious bond we shared.<br>Now we're two grown ups, against the world, together. My sweetie, without you, there's just darkness, my world rips off of the light. And you, feel like warm sun on my skin on a chilly day.<br>At all times even if dont say it, all i want is to run to you into your arms, and feel all the love i have ever been robbed off, again.<br>You feeding me from your own hands wouuld always be a way to make me melt. You make me feel things I never thought could be felt.<br> And again, I adore you, my sugarcane<3
+      We have evolved so much together since the day we met. It brings me to tears everytime, thinking how precious bond we shared.<br>Now we're two grown ups, against the world, together. My sweetie, without you, there's just darkness, my world rips off of the light. And you, feel like warm sun on my skin on a chilly day.<br>At all times even if I dont say it, all i want is to run to you into your arms, and feel all the love i have ever been robbed off, again.<br>You feeding me from your own hands would always be a way to make me melt. You make me feel things I never thought could be felt.<br> And again, I adore you, my sugarcane<3
     </p>
     <button onclick="nextScreen(11)">Now,</button>
   </div>
@@ -194,7 +194,7 @@
       And after all of it, this. Something that we have created together. A brand new and beautiful chapter of our lives, waiting to be filmed. 
      </h2>
     <p>
-      You might be wondering what all this is for…  
+      You might be wondering what all of this is for…  
       It’s just me trying to convey something that has been unsaid and untold.
     </p>
     <h2>There’s something I mean to ask you, right here, right now.</h2>
@@ -268,3 +268,4 @@
 
 </body>
 </html>
+
